arkime/manifests/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arkime
  labels:
    istio-injection: enabled
